fix: improve strong text contrast on dark background

--- a/app/global.css
+++ b/app/global.css
@@ -72,7 +72,7 @@ html {
 }
 
 .prose strong {
-  @apply font-medium text-neutral-800 dark:text-neutral-100;
+  @apply font-medium text-neutral-100;
 }
 
 .prose ul {
